--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 flask==3.0.0
 flask-sqlalchemy==3.1.1
+flask-socketio==5.3.4
+python-socketio==5.9.0
+python-engineio==4.7.1
 bcrypt==4.1.2
 python-dotenv==1.0.0
+cryptography==41.0.7
