--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ flask==3.0.0
 flask-sqlalchemy==3.1.1
 bcrypt==4.1.2
 python-dotenv==1.0.0
+requests==2.31.0
+python-socketio[client]==5.9.0
+cryptography==41.0.7
