--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pymongo>=4.6.1
 bcrypt==4.1.2
 python-dotenv==1.0.0
 flask-session==0.5.0
+flask-cors>=4.0.0
 certifi>=2023.7.22
 dnspython>=2.4.0
 reportlab>=4.0.0
